[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenReview-Helper"
version = "0.1.0"
description = "A python script to automate copying reviews from openreview.net "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.27.1",
    "trio>=0.27.0",
    "trio-websocket>=0.11.1",
    "rich>=13.9.4",
    "markdown-it-py>=3.0.0",
    "mdurl>=0.1.2",
    "pycodestyle>=2.12.1",
    "isort>=5.13.2",
    "autopep8>=2.3.1",
    "Pygments>=2.18.0",
    "python-dotenv>=1.0.1",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "UP",
    "N",
    "S",
    "A",
]
ignore = [
    "E501",
    "B008",
    "S101",
    "W605",
]
exclude = [
    ".git",
    ".venv",
    "venv",
    ".env",
    "env",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "data/",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
files = ["src"]
exclude = ["venv/", ".venv/", "env/"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]
